// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`.not.toContainAllValues fails when given object contains all values including arrays 1`] = `
"<dim>expect(</intensity><red>received</color><dim>).not.toContainAllValues(</intensity><green>expected</color><dim>)</intensity>

Expected object to not contain all values:
  <green>["duck", [{"bar": false, "foo": 0, "hello": "world"}]]</color>
Received:
  <red>{"donald": "duck", "message": [{"bar": false, "foo": 0, "hello": "world"}]}</color>"
`;

exports[`.not.toContainAllValues fails when given object contains all values including objects 1`] = `
"<dim>expect(</intensity><red>received</color><dim>).not.toContainAllValues(</intensity><green>expected</color><dim>)</intensity>

Expected object to not contain all values:
  <green>[{"bar": false, "foo": 0, "hello": "world"}, "duck"]</color>
Received:
  <red>{"donald": "duck", "message": {"bar": false, "foo": 0, "hello": "world"}}</color>"
`;

exports[`.not.toContainAllValues fails when given object contains primitive values 1`] = `
"<dim>expect(</intensity><red>received</color><dim>).not.toContainAllValues(</intensity><green>expected</color><dim>)</intensity>

Expected object to not contain all values:
  <green>["world", 0, false]</color>
Received:
  <red>{"bar": false, "foo": 0, "hello": "world"}</color>"
`;

exports[`.toContainAllValues fails when given object does not contain all primitive values 1`] = `
"<dim>expect(</intensity><red>received</color><dim>).toContainAllValues(</intensity><green>expected</color><dim>)</intensity>

Expected object to contain all values:
  <green>["hello", 0, false]</color>
Received:
  <red>{"bar": false, "foo": 0, "hello": "world"}</color>"
`;

exports[`.toContainAllValues fails when given object does not contain all primitive values 2`] = `
"<dim>expect(</intensity><red>received</color><dim>).toContainAllValues(</intensity><green>expected</color><dim>)</intensity>

Expected object to contain all values:
  <green>["world", 0]</color>
Received:
  <red>{"bar": false, "foo": 0, "hello": "world"}</color>"
`;

exports[`.toContainAllValues fails when given object does not contain all values including arrays 1`] = `
"<dim>expect(</intensity><red>received</color><dim>).toContainAllValues(</intensity><green>expected</color><dim>)</intensity>

Expected object to contain all values:
  <green>["duck", [{"hello": "world"}]]</color>
Received:
  <red>{"donald": "duck", "message": [{"bar": false, "foo": 0, "hello": "world"}]}</color>"
`;

exports[`.toContainAllValues fails when given object does not contain all values including objects 1`] = `
"<dim>expect(</intensity><red>received</color><dim>).toContainAllValues(</intensity><green>expected</color><dim>)</intensity>

Expected object to contain all values:
  <green>[{"hello": "world"}]</color>
Received:
  <red>{"donald": "duck", "message": {"bar": false, "foo": 0, "hello": "world"}}</color>"
`;
